modified:   aer2vecBuild.ipynb Added link to Zenodo

--- a/aer2vecBuild.ipynb
+++ b/aer2vecBuild.ipynb
@@ -11,38 +11,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#download textfiles derived from https://www.nature.com/articles/sdata201626\n",
-    "#Banda, J. M., Evans, L., Vanguri, R. S., Tatonetti, N. P., Ryan, P. B., & Shah, N. H. (2016). A curated and standardized adverse drug event resource to accelerate drug safety research. Scientific data, 3, 160026. doi:10.1038/sdata.2016.26\n",
-    "!wget https://zenodo.org/api/files/6dd63252-180e-43d4-a3de-a211de7b1cae/textfiles.tar.gz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!tar xvzf textfiles.tar.gz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mbanda.txt\u001b[m\u001b[m               outputweightvectors.bin \u001b[31mpsss.txt\u001b[m\u001b[m\n",
-      "\u001b[31mbanda_switch.txt\u001b[m\u001b[m        outputweightvectors.txt \u001b[34mpsss_index\u001b[m\u001b[m\n",
-      "inputweightvectors.bin  \u001b[31mps.txt\u001b[m\u001b[m                  \u001b[31mpsss_switch.txt\u001b[m\u001b[m\n",
-      "inputweightvectors.txt  \u001b[34mps_index\u001b[m\u001b[m\n",
-      "output.txt              \u001b[31mps_switch.txt\u001b[m\u001b[m\n",
+      "--2019-07-09 16:52:20--  https://zenodo.org/record/3283012/files/textfiles.tar.gz\n",
+      "Resolving zenodo.org... 188.184.65.20\n",
+      "Connecting to zenodo.org|188.184.65.20|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 512787327 (489M) [application/octet-stream]\n",
+      "Saving to: ‘textfiles.tar.gz’\n",
+      "\n",
+      "textfiles.tar.gz    100%[===================>] 489.03M  11.9MB/s    in 67s     \n",
+      "\n",
+      "2019-07-09 16:53:28 (7.32 MB/s) - ‘textfiles.tar.gz’ saved [512787327/512787327]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#download textfiles derived from https://www.nature.com/articles/sdata201626\n",
+    "#Banda, J. M., Evans, L., Vanguri, R. S., Tatonetti, N. P., Ryan, P. B., & Shah, N. H. (2016). A curated and standardized adverse drug event resource to accelerate drug safety research. Scientific data, 3, 160026. doi:10.1038/sdata.2016.26\n",
+    "!wget https://zenodo.org/record/3283012/files/textfiles.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x textfiles/\n",
+      "x textfiles/ps_switch.txt\n",
+      "x textfiles/psss_switch.txt\n",
+      "x textfiles/psss.txt\n",
+      "x textfiles/banda_switch.txt\n",
+      "x textfiles/banda.txt\n",
+      "x textfiles/ps.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "!tar xvzf textfiles.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mbanda.txt\u001b[m\u001b[m        \u001b[31mps.txt\u001b[m\u001b[m           \u001b[31mps_switch.txt\u001b[m\u001b[m    \u001b[31mpsss_switch.txt\u001b[m\u001b[m\n",
+      "\u001b[31mbanda_switch.txt\u001b[m\u001b[m \u001b[34mps_index\u001b[m\u001b[m         \u001b[31mpsss.txt\u001b[m\u001b[m\n",
       "drug_names pt_names\n",
       ">omalizumab asthma bronchopulmonary_aspergillosis c-reactive_protein_increased lung_infection pyrexia white_blood_cell_count_increased\n",
       ">levonorgestrel condition_aggravated glaucoma optic_nerve_disorder vision_blurred\n",
@@ -67,9 +96,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'semanticvectors'...\n",
+      "remote: Enumerating objects: 241, done.\u001b[K\n",
+      "remote: Counting objects: 100% (241/241), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (188/188), done.\u001b[K\n",
+      "remote: Total 17331 (delta 106), reused 140 (delta 5), pack-reused 17090\u001b[K\n",
+      "Receiving objects: 100% (17331/17331), 3.25 MiB | 0 bytes/s, done.\n",
+      "Resolving deltas: 100% (11671/11671), done.\n",
+      "[INFO] Scanning for projects...\n",
+      "[INFO]                                                                         \n",
+      "[INFO] ------------------------------------------------------------------------\n",
+      "[INFO] Building semanticvectors 5.9\n",
+      "[INFO] ------------------------------------------------------------------------\n",
+      "[INFO] \n",
+      "[INFO] --- maven-enforcer-plugin:1.0:enforce (enforce-maven) @ semanticvectors ---\n",
+      "[INFO] \n",
+      "[INFO] --- maven-resources-plugin:2.6:resources (default-resources) @ semanticvectors ---\n",
+      "[INFO] Using 'UTF-8' encoding to copy filtered resources.\n",
+      "[INFO] skip non existing resourceDirectory /Users/tcohen1/aer2vec/semanticvectors/src/main/resources\n",
+      "[INFO] \n",
+      "[INFO] --- maven-compiler-plugin:2.1:compile (default-compile) @ semanticvectors ---\n",
+      "[INFO] Compiling 107 source files to /Users/tcohen1/aer2vec/semanticvectors/target/classes\n",
+      "[INFO] \n",
+      "[INFO] --- maven-resources-plugin:2.6:testResources (default-testResources) @ semanticvectors ---\n",
+      "[INFO] Using 'UTF-8' encoding to copy filtered resources.\n",
+      "[INFO] Copying 25 resources\n",
+      "[INFO] \n",
+      "[INFO] --- maven-compiler-plugin:2.1:testCompile (default-testCompile) @ semanticvectors ---\n",
+      "[INFO] Compiling 31 source files to /Users/tcohen1/aer2vec/semanticvectors/target/test-classes\n",
+      "[INFO] \n",
+      "[INFO] --- maven-surefire-plugin:2.4.1:test (default-test) @ semanticvectors ---\n",
+      "[INFO] Tests are skipped.\n",
+      "[INFO] \n",
+      "[INFO] --- maven-jar-plugin:2.4:jar (default-jar) @ semanticvectors ---\n",
+      "[INFO] Building jar: /Users/tcohen1/aer2vec/semanticvectors/target/semanticvectors-5.9.jar\n",
+      "[INFO] \n",
+      "[INFO] --- maven-shade-plugin:2.1:shade (default) @ semanticvectors ---\n",
+      "[INFO] Including org.apache.lucene:lucene-core:jar:6.6.0 in the shaded jar.\n",
+      "[INFO] Including org.apache.lucene:lucene-codecs:jar:6.6.0 in the shaded jar.\n",
+      "[INFO] Including org.apache.lucene:lucene-demo:jar:6.6.0 in the shaded jar.\n",
+      "[INFO] Including org.apache.lucene:lucene-expressions:jar:6.6.0 in the shaded jar.\n",
+      "[INFO] Including org.apache.lucene:lucene-facet:jar:6.6.0 in the shaded jar.\n",
+      "[INFO] Including org.apache.lucene:lucene-queries:jar:6.6.0 in the shaded jar.\n",
+      "[INFO] Including javax.servlet:servlet-api:jar:2.4 in the shaded jar.\n",
+      "[INFO] Including org.antlr:antlr4-runtime:jar:4.5.1-1 in the shaded jar.\n",
+      "[INFO] Including org.ow2.asm:asm:jar:5.1 in the shaded jar.\n",
+      "[INFO] Including org.ow2.asm:asm-commons:jar:5.1 in the shaded jar.\n",
+      "[INFO] Including org.apache.lucene:lucene-analyzers-common:jar:6.6.0 in the shaded jar.\n",
+      "[INFO] Including org.apache.lucene:lucene-queryparser:jar:6.6.0 in the shaded jar.\n",
+      "[INFO] Including org.apache.lucene:lucene-sandbox:jar:6.6.0 in the shaded jar.\n",
+      "[INFO] Including org.apache.lucene:lucene-misc:jar:6.6.0 in the shaded jar.\n",
+      "[INFO] Including net.sourceforge.parallelcolt:parallelcolt:jar:0.10.0 in the shaded jar.\n",
+      "[INFO] Including net.sourceforge.jplasma:jplasma:jar:1.2.0 in the shaded jar.\n",
+      "[INFO] Including net.sourceforge.jplasma:core-lapack:jar:0.1 in the shaded jar.\n",
+      "[INFO] Including net.sourceforge.f2j:arpack_combined_all:jar:0.1 in the shaded jar.\n",
+      "[INFO] Including net.sourceforge.jtransforms:jtransforms:jar:2.4.0 in the shaded jar.\n",
+      "[INFO] Including net.sourceforge.csparsej:csparsej:jar:1.1.1 in the shaded jar.\n",
+      "[INFO] Including net.sourceforge.parallelcolt:optimization:jar:1.0 in the shaded jar.\n",
+      "[INFO] Including com.googlecode.netlib-java:netlib-java:jar:0.9.3 in the shaded jar.\n",
+      "[INFO] Including com.github.rwl:JKLU:jar:1.0.0 in the shaded jar.\n",
+      "[INFO] Including com.github.rwl:BTFJ:jar:1.0.1 in the shaded jar.\n",
+      "[INFO] Including com.github.rwl:AMDJ:jar:1.0.1 in the shaded jar.\n",
+      "[INFO] Including com.github.rwl:COLAMDJ:jar:1.0.1 in the shaded jar.\n",
+      "[INFO] Including org.jsoup:jsoup:jar:1.7.3 in the shaded jar.\n",
+      "[WARNING] jtransforms-2.4.0.jar, parallelcolt-0.10.0.jar define 1 overlappping classes: \n",
+      "[WARNING]   - edu.emory.mathcs.utils.IOUtils\n",
+      "[WARNING] jplasma-1.2.0.jar, jtransforms-2.4.0.jar, parallelcolt-0.10.0.jar define 3 overlappping classes: \n",
+      "[WARNING]   - edu.emory.mathcs.utils.ConcurrencyUtils$CustomExceptionHandler\n",
+      "[WARNING]   - edu.emory.mathcs.utils.ConcurrencyUtils$CustomThreadFactory\n",
+      "[WARNING]   - edu.emory.mathcs.utils.ConcurrencyUtils\n",
+      "[WARNING] maven-shade-plugin has detected that some .class files\n",
+      "[WARNING] are present in two or more JARs. When this happens, only\n",
+      "[WARNING] one single version of the class is copied in the uberjar.\n",
+      "[WARNING] Usually this is not harmful and you can skeep these\n",
+      "[WARNING] warnings, otherwise try to manually exclude artifacts\n",
+      "[WARNING] based on mvn dependency:tree -Ddetail=true and the above\n",
+      "[WARNING] output\n",
+      "[WARNING] See http://docs.codehaus.org/display/MAVENUSER/Shade+Plugin\n",
+      "[INFO] Replacing original artifact with shaded artifact.\n",
+      "[INFO] Replacing /Users/tcohen1/aer2vec/semanticvectors/target/semanticvectors-5.9.jar with /Users/tcohen1/aer2vec/semanticvectors/target/semanticvectors-5.9-shaded.jar\n",
+      "[INFO] Dependency-reduced POM written at: /Users/tcohen1/aer2vec/semanticvectors/dependency-reduced-pom.xml\n",
+      "[INFO] Dependency-reduced POM written at: /Users/tcohen1/aer2vec/semanticvectors/dependency-reduced-pom.xml\n",
+      "[INFO] \n",
+      "[INFO] --- maven-install-plugin:2.4:install (default-install) @ semanticvectors ---\n",
+      "[INFO] Installing /Users/tcohen1/aer2vec/semanticvectors/target/semanticvectors-5.9.jar to /Users/tcohen1/.m2/repository/pitt/search/semanticvectors/5.9/semanticvectors-5.9.jar\n",
+      "[INFO] Installing /Users/tcohen1/aer2vec/semanticvectors/dependency-reduced-pom.xml to /Users/tcohen1/.m2/repository/pitt/search/semanticvectors/5.9/semanticvectors-5.9.pom\n",
+      "[INFO] ------------------------------------------------------------------------\n",
+      "[INFO] BUILD SUCCESS\n",
+      "[INFO] ------------------------------------------------------------------------\n",
+      "[INFO] Total time: 6.664 s\n",
+      "[INFO] Finished at: 2019-07-09T16:50:10-07:00\n",
+      "[INFO] Final Memory: 61M/340M\n",
+      "[INFO] ------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "#get and compile 'Bleeding Edge' branch of Semantic Vectors - likely to be available in Master branch in the near future\n",
     "!git clone https://www.github.com/semanticvectors/semanticvectors --branch BleedingEdge; cd semanticvectors; mvn install -P endUserRelease; cd ../"
@@ -77,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indexing to directory 'full_index'...\n",
+      "Indexing to directory 'ps_index'...\n",
       "added 100000 lines\n",
       "added 200000 lines\n",
       "added 300000 lines\n",
@@ -131,8 +259,7 @@
       "added 4400000 lines\n",
       "added 4500000 lines\n",
       "added 4600000 lines\n",
-      "added 4700000 lines\n",
-      "120534 total milliseconds\n"
+      "61140 total milliseconds\n"
      ]
     }
    ],
